[gd_scene load_steps=5 format=2]

[ext_resource path="res://Game/Assets/Images/Experimental/Grey.png" type="Texture" id=1]
[ext_resource path="res://Game/Scripts/Experimental/LocationCardDock.gd" type="Script" id=2]
[ext_resource path="res://Game/Scenes/Experimental/MonsterCardDock.tscn" type="PackedScene" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 67.4016, 67.5065 )

[node name="LocationDock" type="Area2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]

[node name="Grey" type="Sprite" parent="Sprite"]
position = Vector2( 0.0674591, 0.624584 )
scale = Vector2( 1.27946, 1.26757 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0.704514, 0.880508 )
shape = SubResource( 1 )

[node name="Centre" type="Position2D" parent="."]

[node name="ClickCooldown" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="PlayerOneMonsterCardDock" parent="." instance=ExtResource( 3 )]
position = Vector2( -109.542, -0.480011 )

[node name="PlayerTwoMonsterCardDock" parent="." instance=ExtResource( 3 )]
position = Vector2( 110.314, 0.779907 )
[connection signal="body_entered" from="." to="." method="_on_LocationDock_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_LocationDock_body_exited"]
[connection signal="mouse_entered" from="." to="." method="_on_LocationDock_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_LocationDock_mouse_exited"]
[connection signal="timeout" from="ClickCooldown" to="." method="_on_ClickCooldown_timeout"]
